2022-02-03  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Use MetadataTable instead of UnlinkedMetadataTable
        https://bugs.webkit.org/show_bug.cgi?id=236063
        rdar://88269480

        Reviewed by Robin Morisset.

        Use MetadataTable from profiled CodeBlock instead of UnlinkedMetadataTable in concurrent JIT compiler.

        * bytecode/MetadataTable.h:
        (JSC::MetadataTable::offsetInMetadataTable):
        * bytecode/UnlinkedMetadataTable.h:
        (JSC::UnlinkedMetadataTable::offsetInMetadataTable):
        * jit/JITInlines.h:
        (JSC::JIT::emitValueProfilingSite):
        (JSC::JIT::loadPtrFromMetadata):
        (JSC::JIT::load32FromMetadata):
        (JSC::JIT::load8FromMetadata):
        (JSC::JIT::store8ToMetadata):
        (JSC::JIT::store32ToMetadata):
        (JSC::JIT::materializePointerIntoMetadata):
        * jit/JITPropertyAccess.cpp:
        (JSC::JIT::emit_op_resolve_scope):
        (JSC::JIT::emit_op_get_from_scope):

2022-02-02  Saam Barati  <sbarati@apple.com>

        SecureARM64EHashPins should check g_jscConfig.useFastJITPermissions
        https://bugs.webkit.org/show_bug.cgi?id=236055
        <rdar://88222677>

        Reviewed by Mark Lam.

        * assembler/SecureARM64EHashPins.cpp:
        (JSC::SecureARM64EHashPins::initializeAtStartup):
        (JSC::SecureARM64EHashPins::allocatePinForCurrentThread):
        (JSC::SecureARM64EHashPins::deallocatePinForCurrentThread):
        * assembler/SecureARM64EHashPinsInlines.h:
        (JSC::SecureARM64EHashPins::pinForCurrentThread):

2022-02-02  Alexey Shvayka  <ashvayka@apple.com>

        Speed-up JSON.stringify() by avoiding "toJSON" property lookups
        https://bugs.webkit.org/show_bug.cgi?id=235996

        Reviewed by Saam Barati.

        Speedometer2/Vanilla* subtests are highly reliant on JSON.stringify() for "storage":
        it accounts for 10-15% of running time. EmberJS* subtests rely on JSON.stringify() as