@@ -1,5 +1,15 @@
 2022-02-03  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        Unreviewed, remove UnlinkedMetadataTable::offsetInMetadataTable since it is no longer used
+        https://bugs.webkit.org/show_bug.cgi?id=236063
+
+        Follow-up after Saam's comment.
+
+        * bytecode/UnlinkedMetadataTable.h:
+        (JSC::UnlinkedMetadataTable::offsetInMetadataTable): Deleted.
+
+2022-02-03  Yusuke Suzuki  <ysuzuki@apple.com>
+
         [JSC] Use MetadataTable instead of UnlinkedMetadataTable
         https://bugs.webkit.org/show_bug.cgi?id=236063
         rdar://88269480
